log
Wed, May 14, 2025  8:56:15 AM: 
 sudoku.c | 26 +++++++++++++++++++++-----
 1 file changed, 21 insertions(+), 5 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:67:14: error: 'lista' undeclared (first use in this function)
     pushBack(lista, copia) ;
              ^~~~~
sudoku.c:67:14: note: each undeclared identifier is reported only once for each function it appears in
3f0e54c
Wed, May 14, 2025  8:56:33 AM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
ba7d6ff
Wed, May 14, 2025  9:22:52 AM: 
 sudoku.c | 33 ++++++++++++++++++++++++++++++++-
 1 file changed, 32 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
6fe99ed
